--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "import webbrowser\n",
     "from urllib.parse import urljoin, unquote\n",
     "import json\n",
+    "import os\n",
     "\n",
     "# Step 1: Send an HTTP request to the webpage\n",
     "url = 'https://archive.org/download/hogwarts-legacy-voice-files'  # Replace with the URL you want to scrape\n",
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,95 +89,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Hogwarts Legacy (Study Themes from the Original Video Game Soundtrack)': ['https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/ynlgzwvomi/28.%20The%20Observation%20Deck.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/sbggxvlify/02.%20Sorting%20Hat%20Ceremony.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/wztmmqemmc/14.%20Hall%20of%20the%20Keepers.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/qoewxbygal/30.%20Meeting%20with%20Professor%20Weasley.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/dojxvvyewa/41.%20Gringotts%20Vault.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/gmhqrhzcdo/33.%20An%20Intense%20Aversion.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/fqjmeeihok/13.%20Aire%20on%20the%20Side%20of%20Love.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/xvcqttbjxw/05.%20Hufflepuff%20Common%20Room.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/bjzennxklq/31.%20Caring%20for%20a%20Puffskein.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/nkjoyhuqgw/17.%20A%20Trick%20of%20the%20Light.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/egnomycjdz/36.%20The%20Arrival.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/ukjvgociqz/09.%20Focus%20on%20What%20You%20Need.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/sjxjmsjirc/34.%20Dance%20of%20the%20Mooncalves.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/vcmixjpsiw/04.%20Gryffindor%20Common%20Room.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/mywgpkzwaa/29.%20Potions%20Class.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/btpnjtabxc/08.%20Hogwarts%27%20Best%20%26%20Brightest.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/puzolnliax/06.%20Ravenclaw%20Common%20Room.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/okbaxkgnbi/35.%20Central%20Tower.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/fbeqgcocnp/11.%20How%20to%20Care%20for%20a%20Beast.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/mnvsqsddmw/40.%20Submerged.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/lsshkxzchr/32.%20Friendship%20to%20Be.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/bccwjmiapa/38.%20A%20Forgotten%20Mystery.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/zybaymfkfb/15.%20Morning%20at%20Marunweem%20Lake.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/ojvogsndnh/07.%20Honeydukes.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/bktzepujxw/23.%20The%20Escape.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/zthyypzwpy/22.%20Mysteries%20of%20the%20Cosmos.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/gfnafcfeyb/21.%20A%20Focused%20Mind.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/btlvzyirmz/19.%20The%20Quest%20Begins.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/vbpwawwuxz/20.%20Forbidden%20Forest%20Waltz.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/tefstkpzmb/18.%20A%20Delicate%20Art.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/arzjrgvcbh/01.%20Your%20Journey%20Awaits....mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/qkcennlrny/25.%20A%20Faded%20Path.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/arhnvcessr/26.%20Lost.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/wpoipkmwpe/27.%20Outside%20the%20Castle%20Walls.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/pvsjvmytvi/37.%20Hope%20Fades.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/pxjqmikhjq/12.%20Contemplation.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/xhnfumxoxb/10.%20Gateways%20to%20the%20Far%20Stars.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/bptgfqzqfg/16.%20The%20Room%20of%20Hidden%20Things.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/vqnwzeblaf/39.%20Ancient%20Magic%20Coda.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/sjbairvhzs/24.%20Intra%20Muros.mp3',\n",
-       "  'https://eta.vgmtreasurechest.com/soundtracks/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023/atdortquaa/03.%20Slytherin%20Common%20Room.mp3'],\n",
-       " 'Hogwarts Legacy (Original Video Game Soundtrack)': ['https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/smyxmtkrqn/04.%20A%20Proper%20Hogwarts%20Welcome.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/fhalialuoj/06.%20Seeking%20the%20Keepers.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/mcmddhxhde/03.%20Fig%27s%20Search.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/qrznzhkjiy/02.%20The%20House%20Cup.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/tnvskllqdm/17.%20Hog%27s%20Head%20Jig.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/psyvzeuanw/31.%20The%20Room%20of%20Requirement.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/mqffzmnmjj/13.%20Grasslands%20Vivarium.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/hkeipvupxn/26.%20The%20Four%20Houses.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/cfhzjgooln/08.%20A%20Lost%20Friend.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/ikoxaoqirm/30.%20The%20Halls%20of%20Hogwarts.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/iymnqyteah/23.%20The%20Greenhouse.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/cfusycaidl/29.%20Haven.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/laumkdfltq/25.%20Coastal%20Vivarium.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/gcsbholeda/12.%20Miriam%27s%20Memory.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/kwvbljqpjd/09.%20Everybody%20Grab%20a%20Broom.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/jgxouxattz/20.%20Legacy%20of%20Magic.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/cosnxxvsax/32.%20Niamh%27s%20Lullaby.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/tbctbkbpai/11.%20Anticipating%20Rookwood.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/mnydwfpplo/05.%20Potting%20Mandrakes.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/yfbkpguhqx/22.%20A%20Portrait%20of%20Love.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/gmbqlleipp/18.%20Guardians%20Awaken.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/nkolgipiig/33.%20Trespassers.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/qxieevfijb/15.%20Isidora%27s%20Pain.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/cpshjebnma/21.%20Ruins%20of%20a%20Noted%20Seer.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/oammioezxw/01.%20Overture%20to%20the%20Unwritten%20%28from%20Hogwarts%20Legacy%29.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/xopksqegnj/27.%20You%27ve%20Made%20Your%20Choice.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/hjyiejmuuo/28.%20Soaring%20over%20Hogwarts.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/frogcdckto/19.%20Accio%21.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/kezialrtuw/07.%20Ranrok%27s%20Rage.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/zipvehodcq/34.%20Tribute.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/qkyvsmyuiq/14.%20A%20Fitting%20New%20Home.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/aazcjqbkky/24.%20Ollivander%27s%20Wand%20Shop.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/lcmqplmrou/10.%20All%20Roads%20Lead%20to%20Hogsmeade.mp3',\n",
-       "  'https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/zlxmxxbknm/16.%20See%20You%20After%20Class.mp3']}"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "urls = [\n",
     "    \"https://downloads.khinsider.com/game-soundtracks/album/hogwarts-legacy-study-themes-from-the-original-video-game-soundtrack-2023\",\n",
@@ -201,17 +115,28 @@
     "        for tag in soup.find_all(\"audio\"):\n",
     "            src = tag.get(\"src\")\n",
     "            srcs.append(src)\n",
-    "    data[title] = srcs"
+    "    data[title] = srcs\n",
+    "\n",
+    "with open('music.json', 'w') as f:\n",
+    "    json.dump(data, f, indent=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('music.json', 'w') as f:\n",
-    "    json.dump(data, f, indent=4)"
+    "# walk in folder ./assets\n",
+    "wallpapers = []\n",
+    "for path, dir, files in os.walk('./assets'):\n",
+    "    for file in files:\n",
+    "        # check if file ends with .jpg, .jpeg or .png\n",
+    "        if file.endswith('.jpg') or file.endswith('.jpeg') or file.endswith('.png'):\n",
+    "            wallpapers.append(path + '/' + file)\n",
+    "\n",
+    "with open('wallpapers.json', 'w') as f:\n",
+    "    json.dump(wallpapers, f)"
    ]
   }
  ],
